# datathon25_alpiq

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: feature_engineering.ipynb  forecasting.ipynb
outputs/: students_results_Placeholder_ES.csv
scripts_python/: forecast_avg_customer.py  load_forecasting.py  scoring_script.py  train_test_split.py
slides/: placeholdeer.pptx
src/datathon2025/: data.py  forecast_models.py
